src/test/ui/attr-eq-token-tree.stderr
error: unexpected token: `!`
  --> $DIR/attr-eq-token-tree.rs:3:11
   |
LL | #[my_attr = !] //~ ERROR unexpected token: `!`
   |           ^

error: aborting due to previous error

